--- a/src/assets/styles/components/_section-approach.scss
+++ b/src/assets/styles/components/_section-approach.scss
@@ -13,6 +13,7 @@
     height: 100%;
     justify-content: center;
     position: relative;
+    overflow: hidden;
   }
 
   .block--benefits {
